Updated:
- BinniesMods to 1.8.0.
- EnderIO to 0.7.1.
- ExtraCells to 1.6.7.
- Factorization to 0.8.28.
- ForgeMultipart to 1.0.0.236.
- GregTech to 4.07q.
- HardcoreEnderExpansion to 1.3.1
- LogisticsPipes to 0.7.4-98
- MagicBees to 2.1.11.
- NuclearControl to 1.6.2e.
- OpenComputers to 1.1.3.
- Pneumaticraft to 1.0.6
- StargateTech2 to 0.6.1
- SteveFactoryManager to A29
- StevesCarts to 2.0.0.b10.
- ThaumicTinkerer to 2.1-66.

Downgraded:
- None.

Added:
- None.

Removed:
- None.

Fixed:
- None.