@@ -2457,85 +2457,6 @@
             md5="43b1629c43a06fdf8b2438a62c8170a0"
             download="server"
             />
-        <!---Flenix Mods-->
-
-        <mod name="FlenixCitiesCore"
-            description="A core mod for Flenix's Mods"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.6.2.1"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files//FlenixCitiesCore_0.6.2.1.jar"
-            file="FlenixCitiesCore_0.6.2.1.jar"
-            md5="90c2d5ef43e7a64c49d895dd31247034"
-            download="server"
-            />
-
-        <mod name="FlenixCitiesFood"
-            description="A mod that nerfs food...alot"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.3.1"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/FlenixCitiesFood_0.3.1.jar"
-            file="FlenixCitiesFood_0.3.1.jar"
-            md5="5aa72d0df77d603e7a5fd547818fa558"
-            download="server"
-            />
-
-        <mod name="FlenixCitiesLargeBuildings"
-            description="A mod that gives you stuff to build large buildings"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.2.0"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/FlenixCitiesLargeBuildings_0.2.0.jar"
-            file="FlenixCitiesLargeBuildings_0.2.0.jar"
-            md5="5ada26aeec3155058f55ed7283f6abe5"
-            download="server"
-            />
-
-        <mod name="FlenixCitiesOffices"
-            description="A mod that adds office related shizzwazz"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.2.0"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/FlenixCitiesOffice_0.2.0.jar"
-            file="FlenixCitiesOffice_0.2.0.jar"
-            md5="21a387697a7153603a2df5d6651458b1"
-            download="server"
-            />
-
-        <mod name="FlenixCitiesStreets"
-            description="A mod that adds streets"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.1.3"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/FlenixCitiesStreets_0.1.3.jar"
-            file="FlenixCitiesStreets_0.1.3.jar"
-            md5="caadec12a83cb053cce8da699a4c3635"
-            download="server"
-            />
-
-        <mod name="FlenixRoads"
-            description="A mod that adds roads"
-            website="http://silvania.co.uk/mods/downloads/flenixcities.html"
-            version="0.5.1"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/FlenixRoads_0.5.1.jar"
-            file="FlenixRoads_0.5.1.jar"
-            md5="b0878c4e0b88ae573919d077ccc8b40c"
-            download="server"
-            />
 
         <mod name="LightBridges"
             description="A mod that adds Light Bridges and Doors"
